Don't make header fixed, covers up some content

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,6 @@ body{
     height: 80px;
     width: 100%;
     margin-top: 0pt;
-    position: fixed;
 }
 .footer{
     background-color: #c11714;
